# Agents-Control-App

./: OWNERSHIP.md  README.md  README_EN.md  eslint.config.js  gen.cjs  package-lock.json  package.json  read_sheet.py  vite.config.js  write_actions_sheet.cjs  write_sheet.py
GUIDE_REVIEW_EN/: BUILD_GUIDE.md  FEATURE_REVIEW.md  TROUBLESHOOTING.md
GUIDE_REVIEW_VN/: HUONG_DAN_BUILD.md  HUONG_DAN_FIX_LOI.md  README.md  REVIEW_TINH_NANG.md
src/: App.css  App.jsx  HelpTab.jsx  HelpTab.jsx.bak-popupchain  i18n.js  main.jsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
