[package]
name = "agents-control-center"
version = "2026.0.2"
description = "Agents Control Center"
authors = ["Vu"]
license-file = "../OWNERSHIP.md"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
dirs = "6"
opener = "0.7"
zip = "0.6"
